# FinModeling

./: .dockerignore  .gitignore  Dockerfile  README.md  commands_for_bank.py  commands_for_calendar.py  commands_for_database.py  commands_for_management.py  commands_for_options.py  commands_for_transactions.py  db.py  help.txt  pyproject.toml  requirements.txt  telegram_bot.py  unused_optimization.py  unused_reports.py
.github/workflows/: main.yml
finmodeling/: bank.py  calendar.py  database.py  helpers.py  management.py  plots.py  transactions.py
