[project]
name = "finmodeling"
version = "0.1.0"
description = "Financial Modeling & Monitoring project, consisting of telegram bot for monitoring and optimization reports generaiotn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "yfinance==0.2.63",
    "pandas==2.2.1",
    "numpy==1.26.4",
]

[dependency-groups]
bot = [
  "python-telegram-bot==21.0.1",
  "mysql-connector-python==9.3.0",
  "matplotlib==3.8.3",
  "retry>=0.9.2",
  "seaborn>=0.13.2",
  "sqlalchemy>=2.0.45",
]

reports = [
    "bs4==0.0.2",
    "financetoolkit==1.8.4",
    "reportlab==4.1.0",
    "pypdf2==3.0.1",
    "scipy==1.12.0",
]
