[project]
name = "finmodeling"
version = "0.1.0"
description = "Financial Monitoring project, based on the telegram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "yfinance==0.2.63",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "scipy>=1.12.0",
    "python-telegram-bot==21.0.1",
    "mysql-connector-python==9.3.0",
    "matplotlib==3.8.3",
    "retry>=0.9.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
]
